add_library(map map.c map.h)
target_link_libraries(map set)
add_executable(maptest map.test.c)
target_link_libraries(maptest map var)
target_include_directories(map PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

add_test(NAME GetNumOfEntriesEmpty COMMAND maptest n)
add_test(NAME GetNumOfEntriesOne COMMAND maptest 1,1+ n)
add_test(NAME GetNumOfEntriesOscilate COMMAND maptest 1,1+ 1- 1,1+ n)
add_test(NAME ForceRemoveEntry COMMAND maptest ERROR 1-)
add_test(NAME ForceRemoveEntryAfterOscilate COMMAND maptest ERROR 1,1+ 1- 1-)
add_test(NAME ForceGetEntry COMMAND maptest 1?)
add_test(NAME ForceGetEntryAfterOscilate COMMAND maptest 1,1+ 1- 1?)
add_test(NAME GetEntry COMMAND maptest 1,1+ 1?)
add_test(NAME GetEntryAfterOscilate COMMAND maptest 1,1+ 1- 1,1+ 1?)