add_library(queue queue.c queue.h)
add_executable(queuetest queue.test.c)
target_link_libraries(queuetest queue var)
target_include_directories(queue PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

add_test(NAME OneItem COMMAND queuetest 1+)
add_test(NAME LeftEmpty COMMAND queuetest 1+ -)
add_test(NAME Oscilate COMMAND queuetest 1+ - 2+ -)
add_test(NAME MoreThanOne COMMAND queuetest 1+ 2+ - -)
add_test(NAME MoreThanOneAndLeaveOne COMMAND queuetest 1+ 2+ -)
add_test(NAME MoreThanOneAndLeaveAll COMMAND queuetest 1+ 2+)

add_test(NAME ForceDequeEmpty COMMAND queuetest ERROR -)
add_test(NAME ForceDequeEmptyAfterAddedOne COMMAND queuetest ERROR 1+ - -)
add_test(NAME ForceDequeEmptyAfterAddedMoreThanOne COMMAND queuetest ERROR 1+ 2+ - - -)
add_test(NAME ForceDequeEmptyAfterOscilated COMMAND queuetest ERROR 1+ - 2+ 3+ - - -)