# Meta-modules
add_subdirectory(yadsl)
add_subdirectory(tester)
add_subdirectory(testerutils)
add_subdirectory(memdb)

# Modules
add_subdirectory(avl)
add_subdirectory(diff)
add_subdirectory(graph)
add_subdirectory(graphio)
add_subdirectory(graphsearch)
add_subdirectory(heap)
add_subdirectory(map)
add_subdirectory(queue)
add_subdirectory(set)
add_subdirectory(stack)
add_subdirectory(hashmap)
add_subdirectory(vector)
add_subdirectory(list)
