# Meta-modules
add_subdirectory(yadsl)
add_subdirectory(tester)
add_subdirectory(testerutils)
add_subdirectory(memdb)
add_subdirectory(argvp)

# Modules
add_subdirectory(avl)
add_subdirectory(bigint)
add_subdirectory(diff)
add_subdirectory(graph)
add_subdirectory(graphio)
add_subdirectory(graphsearch)
add_subdirectory(heap)
add_subdirectory(hashmap)
add_subdirectory(list)
add_subdirectory(map)
add_subdirectory(queue)
add_subdirectory(set)
add_subdirectory(stack)
add_subdirectory(string)
add_subdirectory(vector)

add_subdirectory(yatester)
