add_library(luamemdbstatic STATIC memdb.c)
target_include_directories(luamemdbstatic PUBLIC ${LUA_INCLUDE_DIR})
target_link_libraries(luamemdbstatic memdb yadsl)
if(WIN32)
	target_link_libraries(luamemdbstatic ${LUA_LIBRARIES})
endif()
set_target_properties(luamemdbstatic PROPERTIES FOLDER libraries)

add_lua_module(luamemdbshared memdb memdb.lua.c)
target_link_libraries(luamemdbshared memdb)
